; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_357.c_std_err.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_357.c_std_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"Interrupted system call\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"Bad file number\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"Permission denied\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"Bad address\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"Invalid argument (not bind)\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"Too many open files\00", align 1
@.str.6 = private unnamed_addr constant [22 x i8] c"Operation would block\00", align 1
@.str.7 = private unnamed_addr constant [26 x i8] c"Operation now in progress\00", align 1
@.str.8 = private unnamed_addr constant [30 x i8] c"Operation already in progress\00", align 1
@.str.9 = private unnamed_addr constant [31 x i8] c"Socket operation on non-socket\00", align 1
@.str.10 = private unnamed_addr constant [29 x i8] c"Destination address required\00", align 1
@.str.11 = private unnamed_addr constant [17 x i8] c"Message too long\00", align 1
@.str.12 = private unnamed_addr constant [31 x i8] c"Protocol wrong type for socket\00", align 1
@.str.13 = private unnamed_addr constant [20 x i8] c"Bad protocol option\00", align 1
@.str.14 = private unnamed_addr constant [23 x i8] c"Protocol not supported\00", align 1
@.str.15 = private unnamed_addr constant [26 x i8] c"Socket type not supported\00", align 1
@.str.16 = private unnamed_addr constant [34 x i8] c"Operation not supported on socket\00", align 1
@.str.17 = private unnamed_addr constant [30 x i8] c"Protocol family not supported\00", align 1
@.str.18 = private unnamed_addr constant [48 x i8] c"Address family not supported by protocol family\00", align 1
@.str.19 = private unnamed_addr constant [23 x i8] c"Address already in use\00", align 1
@.str.20 = private unnamed_addr constant [31 x i8] c"Can't assign requested address\00", align 1
@.str.21 = private unnamed_addr constant [16 x i8] c"Network is down\00", align 1
@.str.22 = private unnamed_addr constant [23 x i8] c"Network is unreachable\00", align 1
@.str.23 = private unnamed_addr constant [32 x i8] c"Net dropped connection or reset\00", align 1
@.str.24 = private unnamed_addr constant [33 x i8] c"Software caused connection abort\00", align 1
@.str.25 = private unnamed_addr constant [25 x i8] c"Connection reset by peer\00", align 1
@.str.26 = private unnamed_addr constant [26 x i8] c"No buffer space available\00", align 1
@.str.27 = private unnamed_addr constant [28 x i8] c"Socket is already connected\00", align 1
@.str.28 = private unnamed_addr constant [24 x i8] c"Socket is not connected\00", align 1
@.str.29 = private unnamed_addr constant [33 x i8] c"Can't send after socket shutdown\00", align 1
@.str.30 = private unnamed_addr constant [34 x i8] c"Too many references, can't splice\00", align 1
@.str.31 = private unnamed_addr constant [21 x i8] c"Connection timed out\00", align 1
@.str.32 = private unnamed_addr constant [19 x i8] c"Connection refused\00", align 1
@.str.33 = private unnamed_addr constant [34 x i8] c"Too many levels of symbolic links\00", align 1
@.str.34 = private unnamed_addr constant [19 x i8] c"File name too long\00", align 1
@.str.35 = private unnamed_addr constant [13 x i8] c"Host is down\00", align 1
@.str.36 = private unnamed_addr constant [17 x i8] c"No Route to Host\00", align 1
@.str.37 = private unnamed_addr constant [20 x i8] c"Directory not empty\00", align 1
@.str.38 = private unnamed_addr constant [19 x i8] c"Too many processes\00", align 1
@.str.39 = private unnamed_addr constant [15 x i8] c"Too many users\00", align 1
@.str.40 = private unnamed_addr constant [20 x i8] c"Disc Quota Exceeded\00", align 1
@.str.41 = private unnamed_addr constant [22 x i8] c"Stale NFS file handle\00", align 1
@.str.42 = private unnamed_addr constant [33 x i8] c"Network SubSystem is unavailable\00", align 1
@.str.43 = private unnamed_addr constant [33 x i8] c"WINSOCK DLL Version out of range\00", align 1
@.str.44 = private unnamed_addr constant [40 x i8] c"Successful WSASTARTUP not yet performed\00", align 1
@.str.45 = private unnamed_addr constant [34 x i8] c"Too many levels of remote in path\00", align 1
@.str.46 = private unnamed_addr constant [15 x i8] c"Host not found\00", align 1
@.str.47 = private unnamed_addr constant [33 x i8] c"Non-Authoritative Host not found\00", align 1
@.str.48 = private unnamed_addr constant [49 x i8] c"Non-Recoverable errors: FORMERR, REFUSED, NOTIMP\00", align 1
@.str.49 = private unnamed_addr constant [45 x i8] c"Valid name, no data record of requested type\00", align 1
@errno = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.50 = private unnamed_addr constant [12 x i8] c"\0AError: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @std_err() #0 {
  %1 = alloca i8*, align 8
  %2 = call i32 (...) @WSAGetLastError()
  switch i32 %2, label %53 [
    i32 10004, label %3
    i32 10009, label %4
    i32 10013, label %5
    i32 10014, label %6
    i32 10022, label %7
    i32 10024, label %8
    i32 10035, label %9
    i32 10036, label %10
    i32 10037, label %11
    i32 10038, label %12
    i32 10039, label %13
    i32 10040, label %14
    i32 10041, label %15
    i32 10042, label %16
    i32 10043, label %17
    i32 10044, label %18
    i32 10045, label %19
    i32 10046, label %20
    i32 10047, label %21
    i32 10048, label %22
    i32 10049, label %23
    i32 10050, label %24
    i32 10051, label %25
    i32 10052, label %26
    i32 10053, label %27
    i32 10054, label %28
    i32 10055, label %29
    i32 10056, label %30
    i32 10057, label %31
    i32 10058, label %32
    i32 10059, label %33
    i32 10060, label %34
    i32 10061, label %35
    i32 10062, label %36
    i32 10063, label %37
    i32 10064, label %38
    i32 10065, label %39
    i32 10066, label %40
    i32 10067, label %41
    i32 10068, label %42
    i32 10069, label %43
    i32 10070, label %44
    i32 10091, label %45
    i32 10092, label %46
    i32 10093, label %47
    i32 10071, label %48
    i32 11001, label %49
    i32 11002, label %50
    i32 11003, label %51
    i32 11004, label %52
  ]

3:                                                ; preds = %0
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %56

4:                                                ; preds = %0
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %56

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %56

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i8** %1, align 8
  br label %56

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i8** %1, align 8
  br label %56

8:                                                ; preds = %0
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0), i8** %1, align 8
  br label %56

9:                                                ; preds = %0
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0), i8** %1, align 8
  br label %56

10:                                               ; preds = %0
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.7, i64 0, i64 0), i8** %1, align 8
  br label %56

11:                                               ; preds = %0
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.8, i64 0, i64 0), i8** %1, align 8
  br label %56

12:                                               ; preds = %0
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.9, i64 0, i64 0), i8** %1, align 8
  br label %56

13:                                               ; preds = %0
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.10, i64 0, i64 0), i8** %1, align 8
  br label %56

14:                                               ; preds = %0
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.11, i64 0, i64 0), i8** %1, align 8
  br label %56

15:                                               ; preds = %0
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.12, i64 0, i64 0), i8** %1, align 8
  br label %56

16:                                               ; preds = %0
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.13, i64 0, i64 0), i8** %1, align 8
  br label %56

17:                                               ; preds = %0
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.14, i64 0, i64 0), i8** %1, align 8
  br label %56

18:                                               ; preds = %0
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.15, i64 0, i64 0), i8** %1, align 8
  br label %56

19:                                               ; preds = %0
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.16, i64 0, i64 0), i8** %1, align 8
  br label %56

20:                                               ; preds = %0
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.17, i64 0, i64 0), i8** %1, align 8
  br label %56

21:                                               ; preds = %0
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.18, i64 0, i64 0), i8** %1, align 8
  br label %56

22:                                               ; preds = %0
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.19, i64 0, i64 0), i8** %1, align 8
  br label %56

23:                                               ; preds = %0
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.20, i64 0, i64 0), i8** %1, align 8
  br label %56

24:                                               ; preds = %0
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.21, i64 0, i64 0), i8** %1, align 8
  br label %56

25:                                               ; preds = %0
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.22, i64 0, i64 0), i8** %1, align 8
  br label %56

26:                                               ; preds = %0
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.23, i64 0, i64 0), i8** %1, align 8
  br label %56

27:                                               ; preds = %0
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.24, i64 0, i64 0), i8** %1, align 8
  br label %56

28:                                               ; preds = %0
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.25, i64 0, i64 0), i8** %1, align 8
  br label %56

29:                                               ; preds = %0
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.26, i64 0, i64 0), i8** %1, align 8
  br label %56

30:                                               ; preds = %0
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.27, i64 0, i64 0), i8** %1, align 8
  br label %56

31:                                               ; preds = %0
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.28, i64 0, i64 0), i8** %1, align 8
  br label %56

32:                                               ; preds = %0
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.29, i64 0, i64 0), i8** %1, align 8
  br label %56

33:                                               ; preds = %0
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.30, i64 0, i64 0), i8** %1, align 8
  br label %56

34:                                               ; preds = %0
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.31, i64 0, i64 0), i8** %1, align 8
  br label %56

35:                                               ; preds = %0
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.32, i64 0, i64 0), i8** %1, align 8
  br label %56

36:                                               ; preds = %0
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.33, i64 0, i64 0), i8** %1, align 8
  br label %56

37:                                               ; preds = %0
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.34, i64 0, i64 0), i8** %1, align 8
  br label %56

38:                                               ; preds = %0
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.35, i64 0, i64 0), i8** %1, align 8
  br label %56

39:                                               ; preds = %0
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.36, i64 0, i64 0), i8** %1, align 8
  br label %56

40:                                               ; preds = %0
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.37, i64 0, i64 0), i8** %1, align 8
  br label %56

41:                                               ; preds = %0
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.38, i64 0, i64 0), i8** %1, align 8
  br label %56

42:                                               ; preds = %0
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.39, i64 0, i64 0), i8** %1, align 8
  br label %56

43:                                               ; preds = %0
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.40, i64 0, i64 0), i8** %1, align 8
  br label %56

44:                                               ; preds = %0
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.41, i64 0, i64 0), i8** %1, align 8
  br label %56

45:                                               ; preds = %0
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.42, i64 0, i64 0), i8** %1, align 8
  br label %56

46:                                               ; preds = %0
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.43, i64 0, i64 0), i8** %1, align 8
  br label %56

47:                                               ; preds = %0
  store i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.44, i64 0, i64 0), i8** %1, align 8
  br label %56

48:                                               ; preds = %0
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.45, i64 0, i64 0), i8** %1, align 8
  br label %56

49:                                               ; preds = %0
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.46, i64 0, i64 0), i8** %1, align 8
  br label %56

50:                                               ; preds = %0
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.47, i64 0, i64 0), i8** %1, align 8
  br label %56

51:                                               ; preds = %0
  store i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.48, i64 0, i64 0), i8** %1, align 8
  br label %56

52:                                               ; preds = %0
  store i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.49, i64 0, i64 0), i8** %1, align 8
  br label %56

53:                                               ; preds = %0
  %54 = load i32, i32* @errno, align 4
  %55 = call i8* @strerror(i32 %54)
  store i8* %55, i8** %1, align 8
  br label %56

56:                                               ; preds = %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5, %4, %3
  %57 = load i32, i32* @stderr, align 4
  %58 = load i8*, i8** %1, align 8
  %59 = call i32 @fprintf(i32 %57, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.50, i64 0, i64 0), i8* %58)
  %60 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @WSAGetLastError(...) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
